# ss

./: CMakeLists.txt  as_main.cpp  emu_main.cpp  obj1  obj2  p1  qqp2  qqproblem  skriptica.sh  stdlib  stdlib.txt  testfile1.txt  testfile2.txt  xkcd1  xkcd2
assembler/: Assembler.cpp  Assembler.h  File.cpp  File.h  Line.cpp  Line.h  Operand.cpp  Operand.h
common/: RelocationEntry.cpp  RelocationEntry.h  Symbol.cpp  Symbol.h  machine_params.h
emulator/: File.cpp  File.h  Instruction.cpp  Instruction.h  Machine.cpp  Machine.h  Memory.cpp  Memory.h
